--- a/MantenimientoApp/src/app/Pais/components/pais-table/pais-table.component.html
+++ b/MantenimientoApp/src/app/Pais/components/pais-table/pais-table.component.html
@@ -1,21 +1,17 @@
-<div *ngIf="countries.length === 0; else table" class="alert alert-warning">
+<div *ngIf="paises.length === 0; else table" class="alert alert-warning">
   No hay paises
 </div>
-
 <ng-template #table>
 <table class="table table-hover">
   <thead>
     <tr>
       <th>#</th>
-      <th>Icono</th>
-      <th>Bandera</th>
-      <th>Nombre</th>
-      <th>Capital</th>
-      <th>Poblacion</th>
+      <th>Descripcion</th>
+
       <th></th>
     </tr>
   </thead>
-  <tbody>
+  <!-- <tbody>
     <tr *ngFor="let country of countries; let i = index">
       <td>{{ i +1}}</td>
       <td>{{country.flag}}</td>
@@ -23,9 +19,6 @@
       <td>{{country.name.common}}</td>
       <td>{{country.capital}}</td>
       <td>{{country.population | number}}</td>
-      <td><a [routerLink]="['/countries/by', country.cca3]">Info</a></td>
+      <td><a [routerLink]="['/pais/by', country.cca3]">Info</a></td>
     </tr>
-  </tbody>
-
-</table>
-</ng-template>
+  </tbody> -->
