--- a/MantenimientoApp/src/app/muestra/muestra.component.html
+++ b/MantenimientoApp/src/app/muestra/muestra.component.html
@@ -1,1 +1,16 @@
-<p>muestra works!</p>
+<h2>Tipo de muestra</h2>
+<hr>
+<div class="row">
+  <div class="col text-center">
+    <!-- SEARCH BOX-->
+    <button class="btn mx-2" [ngClass]="{'btn-outline-primary':selectedFuncion===funcion}"
+    *ngFor="let funcion of funciones" (click)="searchMuestra(funcion)">{{funcion}}</button>
+    <hr>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <!-- Table Countries-->
+    <muestra-table [muestras]="muestras"></muestra-table>
+  </div>
+</div>
