--- a/MantenimientoApp/src/app/Pais/Pages/por-pais-pagina.component.html
+++ b/MantenimientoApp/src/app/Pais/Pages/por-pais-pagina.component.html
@@ -1,19 +1,17 @@
-<h2>Por pais</h2>
+<h2>Pais</h2>
 <hr>
 <div class="row">
   <div class="col text-center">
     <!-- SEARCH BOX-->
-    <!-- <button style="font-family: Calisto MT;" class="btn mx-2"
-    [ngClass]="{'btn-outline-primary': selectedExamen === rutinas}"
-    *ngFor="let rutinas of rutinas" (click)="selectedExamen = rutinas; searchByTipoOrden()">{{rutinas}}
-  </button> -->
+    <button class="btn mx-2" [ngClass]="{'btn-outline-primary':selectedFuncion===funcion}"
+    *ngFor="let funcion of funciones" (click)="searchPais(funcion)">{{funcion}}</button>
     <hr>
-</div>
+  </div>
 </div>
 <div class="row">
   <div class="col">
-    <!-- Tabla por Resultados-->
-   <!-- <pais-table style="font-family: cursive;" [pais]="pais"></pais-table> -->
-   <!-- <pais-table></pais-table> -->
+    <!-- Table Countries-->
+    <pais-table [paises]="paises"></pais-table>
   </div>
 </div>
+
