--- a/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -10,4 +10,5 @@
   <!-- <li routerLink="countries/by-country" routerLinkActive="active" class="list-group-item">Doctor</li> -->
   <!-- <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item">Paciente</li> -->
   <li routerLink="muestra/by-muestra" routerLinkActive="active" class="list-group-item">Muestra</li>
+  <li routerLink="departamento/por-departamento" routerLinkActive="active" class="list-group-item">Departamentos</li>
 </ul>
