--- a/MantenimientoApp/src/app/Departamento/Pages/por-departamento-pagina.component.html
+++ b/MantenimientoApp/src/app/Departamento/Pages/por-departamento-pagina.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col">
     <!-- Table Countries-->
-    <pais-table [departamentos]="departamentos"></pais-table>
+    <departamento-table [departamentos]="departamentos"></departamento-table>
   </div>
 </div>
 
