cambios en pais

--- a/MantenimientoApp/src/app/Pais/Pages/por-pais-pagina.component.html
+++ b/MantenimientoApp/src/app/Pais/Pages/por-pais-pagina.component.html
@@ -3,15 +3,21 @@
 <div class="row">
   <div class="col text-center">
     <!-- SEARCH BOX-->
+    <shared-search-box *ngIf="selectedFuncion==='Buscar'" placeholder="Buscar por ID" (onValue)="searchPaisById($event)"></shared-search-box>
+    <br>
     <button class="btn mx-2" [ngClass]="{'btn-outline-primary':selectedFuncion===funcion}"
-    *ngFor="let funcion of funciones" (click)="searchPais(funcion)">{{funcion}}</button>
+    *ngFor="let funcion of funciones" (click)="selectFuncion(funcion)">{{funcion}}</button>
     <hr>
+
   </div>
 </div>
 <div class="row">
   <div class="col">
     <!-- Table Countries-->
-    <pais-table [paises]="paises"></pais-table>
+    <pais-table *ngIf="selectedFuncion=='Buscar'" [paises]="paises"(updateEvent)="updatePais($event)" (deleteEvent)="deletePais($event)"></pais-table>
   </div>
 </div>
-
+<div >
+  <pais-form *ngIf="selectedFuncion==='Guardar'"  (messageEvent)="addPais($event)"></pais-form>
+  <!-- <pais-form *ngIf="selectedFuncion==='Editar'" [paisRecibido]="p" (updateEvent)="updatePais2($event)" ></pais-form> -->
+</div>
