ruteo en sidebar (departamentos)

--- a/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,4 +11,5 @@
   <!-- <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item">Paciente</li> -->
   <li routerLink="muestra/by-muestra" routerLinkActive="active" class="list-group-item">Muestra</li>
   <li routerLink="paciente/by-paciente" routerLinkActive="active" class="list-group-item">Paciente</li>
+  <li routerLink="departamento/by-departamento" routerLinkActive="active" class="list-group-item">Departamento</li>
 </ul>
