--- a/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,5 +11,6 @@
   <!-- <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item">Paciente</li> -->
   <li routerLink="muestra/by-muestra" routerLinkActive="active" class="list-group-item">Muestra</li>
   <li routerLink="paciente/by-paciente" routerLinkActive="active" class="list-group-item">Paciente</li>
+  <li routerLink="examenes/by-examenes" routerLinkActive="active" class="list-group-item">Examenes</li>
   <li routerLink="departamento/by-departamento" routerLinkActive="active" class="list-group-item">Departamento</li>
 </ul>
