cambio de boton guardar en examenes

--- a/MantenimientoApp/src/app/examenes/examenes.component.html
+++ b/MantenimientoApp/src/app/examenes/examenes.component.html
@@ -20,6 +20,6 @@
   </div>
 </div>
 <div >
-  <examenes-form *ngIf="selectedFuncion==='Guardar'"  (messageEvent)="addExamenes($event)"></examenes-form>
+  <examenes-form *ngIf="selectedFuncion==='Agregar'"  (messageEvent)="addExamenes($event)"></examenes-form>
   <examenes-form *ngIf="selectedFuncion==='Editar'" [examenesRecibida]="e" (updateEvent)="updateExamenes2($event)" ></examenes-form>
 </div>
