--- a/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -12,5 +12,6 @@
   <li routerLink="muestra/by-muestra" routerLinkActive="active" class="list-group-item">Muestra</li>
   <li routerLink="paciente/by-paciente" routerLinkActive="active" class="list-group-item">Paciente</li>
   <li routerLink="examenes/by-examenes" routerLinkActive="active" class="list-group-item">Examenes</li>
+  <li routerLink="valores/by-valores" routerLinkActive="active" class="list-group-item">Valores de Referencia</li>
   <li routerLink="departamento/by-departamento" routerLinkActive="active" class="list-group-item">Departamento</li>
 </ul>
