--- a/MantenimientoApp/src/app/Departamento/components/departamento-table/departamento-table.component.html
+++ b/MantenimientoApp/src/app/Departamento/components/departamento-table/departamento-table.component.html
@@ -15,7 +15,8 @@
       <tr *ngFor="let departamentos of departamentos; let i = index">
         <td>{{ i + 1 }}</td>
         <!-- <td>{{ pais.IdPais }}</td> -->
-        <td>{{ departamentos.descripcion }}</td>
+        <td>{{ departamentos.Descripcion}}</td>
+        <td>{{departamentos}}</td>
       </tr>
     </tbody>
   </table>
