--- a/MantenimientoApp/src/app/PaisV2/forms/paisV2-forms.component.html
+++ b/MantenimientoApp/src/app/PaisV2/forms/paisV2-forms.component.html
@@ -1,11 +1,10 @@
-
 <!-- {{muestras|json}} -->
-<form (ngSubmit)="onSubmit()" #paisForm="ngForm">
+<form (ngSubmit)="onSubmit()" #paisV2Form="ngForm">
   <div class="form-group">
       <label for="descripcion">Descripcion</label>
       <input type="text" class="form-control" id="descripcion"
              required
-             [(ngModel)]="pais.descripcion" value="test"
+             [(ngModel)]="paisesV2.descripcion" value="test"
              name="descripcion">
   </div>
 
@@ -13,8 +12,8 @@
       <label for="estado">Estado</label>
       <input type="text" class="form-control" id="estado"
               required
-              [(ngModel)]="pais.estado"
+              [(ngModel)]="paisesV2.estado"
               name="estado">
   </div>
-  <button type="submit" class="btn btn-success" [disabled]="!paisForm.form.valid">Submit</button>
+  <button type="submit" class="btn btn-success" [disabled]="!paisV2Form.form.valid">Submit</button>
   </form>
