--- a/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/MantenimientoApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -5,7 +5,8 @@
   <li routerLink="about" routerLinkActive="active" class="list-group-item">About Page</li>
   <li routerLink="contact" routerLinkActive="active" class="list-group-item">Contact Page</li> -->
   <!-- <li routerLink="countries/by-capital" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="list-group-item">Pais</li> -->
-  <li routerLink="pais/por-pais" routerLinkActive="active" class="list-group-item">Pais</li>
+  <!-- <li routerLink="pais/por-pais" routerLinkActive="active" class="list-group-item">Pais</li> -->
+  <li routerLink="paisV2/by-paisV2" routerLinkActive="active" class="list-group-item">Pais</li>
 
   <!-- <li routerLink="countries/by-country" routerLinkActive="active" class="list-group-item">Doctor</li> -->
   <!-- <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item">Paciente</li> -->
