--- a/MantenimientoApp/src/app/muestra/forms/muestra-forms.component.html
+++ b/MantenimientoApp/src/app/muestra/forms/muestra-forms.component.html
@@ -4,7 +4,7 @@
     <label for="descripcion">Descripcion</label>
     <input type="text" class="form-control" id="descripcion"
            required
-           [(ngModel)]="muestras.descripcion"
+           [(ngModel)]="muestras.descripcion" value="test"
            name="descripcion">
 </div>
 
